src/tests/snapshots/niri__tests__window_opening__check_target_output_and_workspace@fsT-wfsB2-spB2.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\nwant fullscreen: B2\nset parent: B2"
expression: snapshot
---
final monitor: headless-2
final workspace: 0 (ws-2)

initial configure:
size: 1920 × 1080, bounds: 1900 × 1060, states: [Fullscreen]

post-map configures:
size: 1920 × 1080, bounds: 1868 × 1028, states: [Fullscreen]

unfullscreen configure:
size: 0 × 0, bounds: 1900 × 1060, states: []
